<resources>
    <string name="app_name">Calculator</string>
    <string name="title_activity_main">Calculator</string>
    <string name="SHARED_PREFERENCES_HISTORY">PREFERENCE_FILE_HISTORY</string>
    <string name="SHARED_PREFERENCES_SETTINGS">SHARED_PREFERENCES_SETTINGS</string>
    <string name="SHARED_PREFERENCES_LOG">SHARED_PREFERENCES_LOG</string>
    <string name="MENU_HEADLINE_VERSION_DATA">Version Change Log</string>
    <string name="WELCOMING_MESSAGE"><![CDATA[

    <b>Version 1.2 (28/07/2018)</b><br>
    &bull; Linked source code to GitHub<br>
    &bull; Fixed some bugs that caused crashes<br>
    &bull; Added complex trigonometric functions<br>
    &bull; Menu rework<br>
    &bull; App rename<br>
    &bull; Design update<br>

    <br>

    <b>Version 1.1 (21/05/2017)</b><br>
    &bull; Backspace crash bug<br>
    &bull; Landscape layout<br>
    &bull; UI settings<br>
    &bull; Notation settings<br>
    &bull; Random and cis functions<br>
    &bull; Minor design tweaks<br>
    &bull; New icon<br>
    &bull; Square root performance<br>

    <br>

    <b>Version 1.0 (02/05/2017)</b><br>
    &bull; Initial release

    <br>
    <br>
    <br>
    <br>
    <br>
    <br>
    <br>
    <br>
    <br>
    <br>
    <br>
    <br>

    ]]></string>
    <string name="MENU_HEADLINE_REVIEW">Hey there!</string>
    <string name="REVIEW_PLEA"><![CDATA[
    <b>Thanks for using my calculator!</b><br>
    If you like it so far, please support me by leaving a rating in the Google PlayStore!
    ]]></string>
    <string name="MENU_REVIEW_RATE_NOW">Rate now</string>
    <string name="shift_enabled">2nd</string>
    <string name="shift_disabled">   </string>
    <string name="ERROR_DIVIDE_BY_ZERO">ERROR: DIVIDE BY ZERO</string>
    <string name="ERROR_ARGUMENT_OUT_OF_RANGE">ERROR: argument is out of range</string>
    <string name="ERROR_FACTORIAL_DOMAIN">ERROR: n must be positive integer</string>
    <string name="ERROR_SYNTAX">ERROR: Invalid syntax</string>
    <string name="ERROR_MISSING_ARGUMENT">ERROR: missing argument</string>
    <string name="ERROR_ARGUMENT_MUST_BE_POSITIVE_INTEGER">ERROR: argument must be positive integer</string>
    <string name="TOAST_TOGGLE_OUTPUT_ERROR1">EXECUTE CALCULATION FIRST</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_github_link">View source code on GitHub</string>
    <string name="settings_copyright">Copyright 2018 Leander Lehmenkuehler</string>
    <string name="settings_version">Version 1.2</string>
    <string name="CONVERT_DISTANCE">Distance</string>
    <string name="CONVERT_AREA">Area</string>
    <string name="CONVERT_VOLUME">Volume</string>
    <string name="CONVERT_MASS">Mass</string>
    <string name="CONVERT_DENSITY">Density</string>
    <string name="CONVERT_VELOCITY">Velocity</string>
    <string name="CONVERT_TIME">Time</string>
    <string name="CONVERT_ANGLE">Angle</string>
    <string name="CONVERT_FREQUENCY">Frequency</string>
    <string name="CONVERT_FORCE">Force</string>
    <string name="CONVERT_TORQUE">Torque</string>
    <string name="CONVERT_PRESSURE">Pressure</string>
    <string name="CONVERT_ENERGY">Energy</string>
    <string name="CONVERT_POWER">Power</string>
    <string name="CONVERT_TEMPERATURE">Temperature</string>
    <string name="CONVERT_DATA_SIZE">Data Size</string>
    <string name="MENU_HEADLINE_CONSTANTS">Constants</string>
    <string name="MENU_HEADLINE_PREFIXES">Prefixes</string>
    <string name="MENU_HEADLINE_FUNCTIONS">Functions</string>
    <string name="MENU_HEADLINE_HISTORY">History</string>
    <string name="MENU_HEADLINE_CONVERT_1">Convert</string>
    <string name="MENU_HEADLINE_CONVERT_2">Select Source Unit</string>
    <string name="MENU_HEADLINE_CONVERT_3">Converted Values</string>
    <string name="MENU_HEADLINE_MODE">Mode</string>
    <string name="MENU_HISTORY_EMPTY">History is empty!</string>
    <string name="MENU_BUTTON_EXIT">Close</string>
    <string name="MENU_BUTTON_RETURN">Return</string>
    <string name="MENU_BUTTON_CLEAR">Clear</string>
    <string name="MENU_BUTTON_LATER">Later</string>
    <string name="MENU_BUTTON_NEVER">Never</string>
    <string name="FUNCTIONS_TRIGONOMETRIC_AND_HYPERBOLIC">Trigonometric and Hyperbolic</string>
    <string name="FUNCTIONS_EXPONENTS_AND_LOGARITHMS">Exponents and Logarithms</string>
    <string name="FUNCTION_SINE">Sine</string>
    <string name="FUNCTION_COSINE">Cosine</string>
    <string name="FUNCTION_TANGENT">Tangent</string>
    <string name="FUNCTION_COSECANT">Cosecant</string>
    <string name="FUNCTION_SECANT">Secant</string>
    <string name="FUNCTION_COTANGENT">Cotangent</string>
    <string name="FUNCTION_ARCSINE">Arcsine</string>
    <string name="FUNCTION_ARCCOSINE">Arccosine</string>
    <string name="FUNCTION_ARCTANGENT">Arctangent</string>
    <string name="FUNCTION_HYPERBOLIC_SINE">Hyperbolic Sine</string>
    <string name="FUNCTION_HYPERBOLIC_COSINE">Hyperbolic Cosine</string>
    <string name="FUNCTION_HYPERBOLIC_TANGENT">Hyperbolic Tangent</string>
    <string name="FUNCTION_HYPERBOLIC_AREASINE">Area Hyperbolic Sine</string>
    <string name="FUNCTION_HYPERBOLIC_AREACOSINE">Area Hyperbolic Cosine</string>
    <string name="FUNCTION_HYPERBOLIC_AREATANGENT">Area Hyperbolic Tangent</string>
    <string name="FUNCTION_SQUARE_ROOT">Square Root</string>
    <string name="FUNCTION_CUBIC_ROOT">Cubic Root</string>
    <string name="FUNCTION_NTH_ROOT">nth Root</string>
    <string name="FUNCTION_NATURAL_LOGARITHM">Natural Logarithm</string>
    <string name="FUNCTION_COMMON_LOGARITHM">Common Logarithm</string>
    <string name="FUNCTION_NTH_LOGARITHM">nth Logarithm</string>
    <string name="FUNCTION_EXPONENTIAL">Exponential Function</string>
    <string name="FUNCTION_INVERSE">Inverse Function</string>
    <string name="UNIT_FEMTOMETRE">Femtometre</string>
    <string name="UNIT_PICOMETRE">Picometre</string>
    <string name="UNIT_ANGSTROEM">Ångström</string>
    <string name="UNIT_NANOMETRE">Nanometre</string>
    <string name="UNIT_MICROMETRE">Micrometre</string>
    <string name="UNIT_MILLIMETRE">Millimetre</string>
    <string name="UNIT_CENTIMETRE">Centimetre</string>
    <string name="UNIT_DECIMETRE">Decimetre</string>
    <string name="UNIT_METRE">Metre</string>
    <string name="UNIT_DECAMETRE">Decametre</string>
    <string name="UNIT_HECTOMETRE">Hectometre</string>
    <string name="UNIT_KILOMETRE">Kilometre</string>
    <string name="UNIT_MEGAMETRE">Megametre</string>
    <string name="UNIT_GIGAMETRE">Gigametre</string>
    <string name="UNIT_THOU">Thou</string>
    <string name="UNIT_INCH">Inch</string>
    <string name="UNIT_FOOT">Foot</string>
    <string name="UNIT_YARD">Yard</string>
    <string name="UNIT_CHAIN">Chain</string>
    <string name="UNIT_FURLONG">Furlong</string>
    <string name="UNIT_INTERNATIONAL_MILE">International Mile</string>
    <string name="UNIT_FATHOM">Fathom</string>
    <string name="UNIT_CABLE">Cable</string>
    <string name="UNIT_NAUTICAL_MILE">Nautical Mile</string>
    <string name="UNIT_ASTRONOMICAL_UNIT">Astronomical Unit</string>
    <string name="UNIT_LIGHT_YEAR">Light Year</string>
    <string name="UNIT_PARSEC">Parsec</string>
    <string name="UNIT_EARTH_RADIUS">Earth Radius</string>
    <string name="UNIT_LUNAR_DISTANCE">Lunar Distance</string>
    <string name="UNIT_HUBBLE_LENGTH">Hubble Length</string>
    <string name="UNIT_SQUARE_MILLIMETRE">Square Millimetre</string>
    <string name="UNIT_SQUARE_CENTIMETRE">Square Centimetre</string>
    <string name="UNIT_SQUARE_METRE">Square Metre</string>
    <string name="UNIT_ARE">Are</string>
    <string name="UNIT_HECTARE">Hectare</string>
    <string name="UNIT_SQUARE_KILOMETRE">Square Kilometre</string>
    <string name="UNIT_SQUARE_INCH">Square Inch</string>
    <string name="UNIT_SQUARE_FOOT">Square Foot</string>
    <string name="UNIT_SQUARE_YARD">Square Yard</string>
    <string name="UNIT_ACRE">Acre</string>
    <string name="UNIT_SQUARE_MILE">Square Mile</string>
    <string name="UNIT_ROOD">Rood</string>
    <string name="UNIT_SQUARE_DECIMETRE">Square Decimetre</string>
    <string name="UNIT_CUBIC_MILLIMETRE">Cubic Millimetre</string>
    <string name="UNIT_CUBIC_CENTIMETRE">Cubic Centimetre</string>
    <string name="UNIT_CUBIC_DECIMETRE">Cubic Decimetre</string>
    <string name="UNIT_CUBIC_METRE">Cubic Metre</string>
    <string name="UNIT_CUBIC_DECAMETRE">Cubic Decametre</string>
    <string name="UNIT_CUBIC_HECTOMETRE">Cubic Hectometre</string>
    <string name="UNIT_CUBIC_KILOMETRE">Cubic Kilometre</string>
    <string name="UNIT_MILLILITRE">Millilitre</string>
    <string name="UNIT_CENTILITRE">Centilitre</string>
    <string name="UNIT_DECILITRE">Decilitre</string>
    <string name="UNIT_LITRE">Litre</string>
    <string name="UNIT_DECALITRE">Decalitre</string>
    <string name="UNIT_HECTOLITRE">Hectolitre</string>
    <string name="UNIT_KILOLITRE">Kilolitre</string>
    <string name="UNIT_CUBIC_INCH">Cubic Inch</string>
    <string name="UNIT_CUBIC_FOOT">Cubic Foot</string>
    <string name="UNIT_CUBIC_YARD">Cubic Yard</string>
    <string name="UNIT_GALLON_UK">Imperial Gallon (UK)</string>
    <string name="UNIT_GALLON_US">US Gallon Liquid</string>
    <string name="UNIT_GALLON_US_DRY">US Dry Gallon</string>
    <string name="UNIT_MICROGRAM">Microgram</string>
    <string name="UNIT_MILLIGRAM">Milligram</string>
    <string name="UNIT_GRAM">Gram</string>
    <string name="UNIT_KILOGRAM">Kilogram</string>
    <string name="UNIT_METRIC_TON">Metric Ton</string>
    <string name="UNIT_GRAIN">Grain</string>
    <string name="UNIT_DRAM">Dram</string>
    <string name="UNIT_OUNCE">Ounce</string>
    <string name="UNIT_POUND">Pound</string>
    <string name="UNIT_STONE">Stone</string>
    <string name="UNIT_QUARTER">Quarter</string>
    <string name="UNIT_LONG_HUNDREDWEIGHT_UK">Long Hundredweight (UK)</string>
    <string name="UNIT_SHORT_HUNDREDWEIGHT_US">Short Hundredweight (US)</string>
    <string name="UNIT_LONG_TON_UK">Long Ton (UK)</string>
    <string name="UNIT_SHORT_TON_US">Short Ton (US)</string>
    <string name="UNIT_CARAT">Carat</string>
    <string name="UNIT_TROY_OUNCE">Troy Ounce</string>
    <string name="UNIT_TROY_POUND">Troy Pound</string>
    <string name="UNIT_PENNYWEIGHT">Pennyweight</string>
    <string name="UNIT_TROY_GRAIN">Troy Grain</string>
    <string name="UNIT_SLUG">Slug</string>
    <string name="UNIT_HYL">Hyl / Metric Slug</string>
    <string name="UNIT_GRAM_PER_CUBIC_CENTIMETRE">Gram per Cubic Centimetre</string>
    <string name="UNIT_KILOGRAM_PER_CUBIC_DECIMETRE">Kilogram per Cubic Centimetre</string>
    <string name="UNIT_KILOGRAM_PER_CUBIC_METRE">Kilogram per Cubic Metre</string>
    <string name="UNIT_METRIC_TON_PER_CUBIC_METRE">Metric Ton per Cubic Metre</string>
    <string name="UNIT_KILOGRAM_PER_LITRE">Kilogram per Litre</string>
    <string name="UNIT_GRAM_PER_MILLILITRE">Gram per Millilitre</string>
    <string name="UNIT_POUND_PER_CUBIC_INCH">Pound per Cubic Inch</string>
    <string name="UNIT_POUND_PER_CUBIC_FOOT">Pound per Cubic Foot</string>
    <string name="UNIT_METRES_PER_SECOND">Metres per Second</string>
    <string name="UNIT_KILOMETRES_PER_SECOND">Kilometres per Second</string>
    <string name="UNIT_KILOMETRES_PER_HOUR">Kilometres per Hour</string>
    <string name="UNIT_METRES_PER_MINUTE">Metres per Minute</string>
    <string name="SETTINGS_HEADLINE_GENERAL">General Settings</string>
    <string name="SETTINGS_INTERIM_RESULTS">Show interim results</string>
    <string name="SETTINGS_FULLSCREEN">Fullscreen</string>
    <string name="SETTINGS_LOCK_PORTRAIT">Lock portrait mode</string>
    <string name="SETTINGS_VIBRATION">Vibration</string>
    <string name="SETTINGS_HEADLINE_PRECISION">Precision Settings</string>
    <string name="SETTINGS_HEADLINE_ALTERNATIVE_NOTATION">Alternative Notation</string>
    <string name="SETTINGS_HEADLINE_UI">User Interface</string>
</resources>