<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    tools:context="org.lehmenkuehler.calculator.SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/SETTINGS_HEADLINE_GENERAL"
                android:textAllCaps="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/SwitchInterimResults"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="30dp" />

                <TextView
                    android:id="@+id/TextViewSettingsInterimResults"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SETTINGS_INTERIM_RESULTS" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/SwitchFullscreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="30dp" />

                <TextView
                    android:id="@+id/TextViewSettingsFullscreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SETTINGS_FULLSCREEN" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/SwitchLockPortrait"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="30dp" />

                <TextView
                    android:id="@+id/TextViewLockPortrait"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SETTINGS_LOCK_PORTRAIT" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/SwitchVibration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="30dp" />

                <TextView
                    android:id="@+id/TextViewSettingsVibration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SETTINGS_VIBRATION" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/SETTINGS_HEADLINE_PRECISION"
                android:textAllCaps="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/SwitchFixedDecimalPlaces"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="30dp" />

                <TextView
                    android:id="@+id/TextViewFixedDecimalPlaces"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Fixed decimal places" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv40001"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="Normal Precision" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/SeekBarPrecisionDEC"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6" />

                <TextView
                    android:id="@+id/TextViewPrecisionDEC"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:text="15" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv40002"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="Precision for scientific notation" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/SeekBarPrecisionSCI"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6" />

                <TextView
                    android:id="@+id/TextViewPrecisionSCI"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:text="15" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv40003"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="Precision for engineering notation" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/SeekBarPrecisionENG"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6" />

                <TextView
                    android:id="@+id/TextViewPrecisionENG"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:text="15" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/SETTINGS_HEADLINE_ALTERNATIVE_NOTATION"
                android:textAllCaps="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/ElementAngularMode"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/ButtonAlternativeModeOff"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="20dp"
                    android:text="off"
                    tools:ignore="ButtonStyle,HardcodedText" />

                <Button
                    android:id="@+id/ButtonAlternativeModeSCI"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:text="SCI"
                    tools:ignore="ButtonStyle,HardcodedText" />

                <Button
                    android:id="@+id/ButtonAlternativeModeENG"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:text="ENG"
                    tools:ignore="ButtonStyle,HardcodedText" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv40dwe001"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="Figure threshold for alternative notation" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/SeekBarThreshold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6" />

                <TextView
                    android:id="@+id/TextViewThreshold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:text="5" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/SETTINGS_HEADLINE_UI"
                android:textAllCaps="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tv4000323"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="Keyboard width" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/SeekBarKeyboardWidth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6" />

                <TextView
                    android:id="@+id/TextViewKeyboardWidth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingLeft="10dp"
                    android:text="15" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv00433"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="Button size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/SeekBarButtonSize"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6" />

                <TextView
                    android:id="@+id/TextViewButtonSize"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingLeft="10dp"
                    android:text="15" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv40005"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="Input text size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/SeekBarDisplayTextSize"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6" />

                <TextView
                    android:id="@+id/TextViewDisplayTextSize"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingLeft="10dp"
                    android:text="15" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/SETTINGS_HEADLINE_ABOUT"
                android:textAllCaps="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="Version 1.0" />

            <Button
                android:id="@+id/ButtonContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/menu_button"
                android:text="Contact the Developer"
                android:textAllCaps="false"
                android:textColor="@color/MENU_BUTTON_TEXT" />

            <Button
                android:id="@+id/ButtonReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/menu_button"
                android:text="Reset to Default"
                android:textAllCaps="false"
                android:textColor="@color/MENU_BUTTON_TEXT" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
